erDiagram
    account {
        int id PK "Primary key"
        string(40) chain_key "Chain key (hex representation, NOT NULL)"
        string(64) packet_key "Packet key (hex representation, NOT NULL)"
        string(40) safe_address FK "Foreign key to hopr safe (hex representation)"
        binary(8) published_block "Published block (NOT NULL)"
        binary(8) published_tx_index "Published tx index (NOT NULL)"
        binary(8) published_log_index "Published log index (NOT NULL)"
    }

    announcement {
        int id PK "Primary key"
        int account_id FK "Foreign key to account (NOT NULL)"
        string multiaddress "Multiaddress (NOT NULL)"
        binary(8) published_block "Published block (NOT NULL)"
        binary(8) published_tx_index "Published tx index (NOT NULL)"
        binary(8) published_log_index "Published log index (NOT NULL)"
    }

    channel {
        int id PK "Primary key"
        string(64) concrete_channel_id UK "Unique channel identifier (hex representation, NOT NULL)"
        string(40) source "Source address (hex representation, NOT NULL)"
        string(40) destination "Destination address (hex representation, NOT NULL)"
        binary(12) balance "Channel balance (NOT NULL)"
        int status "Channel status (NOT NULL)"
        binary(8) epoch "Epoch (NOT NULL, default is 1)"
        binary(8) ticket_index "Ticket index (NOT NULL, default is 0)"
        datetime closure_time "Closure timestamp"
        bool corrupted_state "Corrupted state flag (NOT NULL, default is false)"
    }

    hopr_balance {
        int id PK "Primary key"
        string(40) address UK "Unique address (hex representation, NOT NULL)"
        binary(12) balance "wxHOPR token balance (NOT NULL)"
        binary(8) last_changed_block "Last changed block (NOT NULL)"
        binary(8) last_changed_tx_index "Last changed tx index (NOT NULL)"
        binary(8) last_changed_log_index "Last changed log index (NOT NULL)"
    }

    native_balance {
        int id PK "Primary key"
        string(40) address UK "Unique address (hex representation, NOT NULL)"
        binary(12) balance "Native token balance (NOT NULL)"
        binary(8) last_changed_block "Last changed block (NOT NULL)"
        binary(8) last_changed_tx_index "Last changed tx index (NOT NULL)"
        binary(8) last_changed_log_index "Last changed log index (NOT NULL)"
    }

    chain_info {
        int id PK "Primary key"
        binary(8) last_indexed_block "Last indexed block"
        binary(12) ticket_price "Ticket price"
        binary(32) channels_dst "Channels destination"
        binary(32) ledger_dst "Ledger destination"
        binary(32) safe_registry_dst "Safe registry destination"
        float min_incoming_ticket_win_prob "Min incoming ticket win probability"
    }

    log {
        int id PK "Primary key"
        int log_status_id FK "Foreign key to log status"
        binary(8) tx_index UK "Transaction index (NOT NULL)"
        binary(8) log_index UK "Log index (NOT NULL)"
        binary(8) block_number UK "Block number (NOT NULL)"
        binary(32) block_hash "Block hash (hex representation, NOT NULL)"
        binary(32) transaction_hash "Transaction hash (hex representation, NOT NULL)"
        binary(20) address "Address (NOT NULL)"
        binary topics "Topics (NOT NULL)"
        binary data "Data (NOT NULL)"
        bool removed "Removed flag (default is false)"
    }

    log_status {
        int id PK "Primary key"
        int log_id FK "Foreign key to log (NOT NULL)"
        binary(8) tx_index UK "Transaction index (NOT NULL)"
        binary(8) log_index UK "Log index (NOT NULL)"
        binary(8) block_number UK "Block number (NOT NULL)"
        bool processed "Processed flag (default is false)"
        datetime processed_at "Processing timestamp"
        binary(32) checksum "Checksum"
    }

    log_topic_info {
        int id PK "Primary key"
        string(40) address "Contract address (hex representation, NOT NULL)"
        string(64) topic "topic (NOT NULL)"
    }

    hopr_safe_contract {
        int id PK "Primary key"
        string(40) address UK "Unique contract address (hex representation, NOT NULL)"
        binary(8) deployed_block "Deployed block (hex representation, NOT NULL)"
        binary(8) deployed_tx_index "Deployed tx index (hex representation, NOT NULL)"
        binary(8) deployed_log_index "Deployed log index (hex representation, NOT NULL)"
    }

    %% ========================================
    %% RELATIONSHIPS
    %% ========================================

    account ||--o{ announcement : "has many"
    account ||--o| hopr_balance : "has 0 or 1"
    account ||--o| native_balance : "has 0 or 1"
    account ||--o{ channel : "has many"
    account ||--o| hopr_safe_contract : "has 0 or 1"
    log_status ||--|| log : "has one"
